pridan vypocetnik ceny ucitelu

--- a/www/styl/Chalkboard.styl
+++ b/www/styl/Chalkboard.styl
@@ -28,6 +28,12 @@
         rect
         text.count
           display none
+    g.explanatory-text
+      text
+        fill #fff
+        font-size 24px
+      &.disabled
+        display none
   h2
     position absolute
     top 0px
