pridano hoverovani nad zeme pro vypocet priplatku

--- a/www/styl/Chalkboard.styl
+++ b/www/styl/Chalkboard.styl
@@ -28,6 +28,9 @@
         rect
         text.count
           display none
+    .hoverables
+      rect
+        fill transparent
     g.explanatory-text
       text
         fill #fff
