pridano zvyrazneni vybraneho ratia

--- a/www/styl/Chalkboard.styl
+++ b/www/styl/Chalkboard.styl
@@ -37,6 +37,9 @@
         font-size 24px
       &.disabled
         display none
+    g.triangles
+      polygon.disabled
+        display none
 
   h2
     position absolute
